--- a/public/adminbackend/css/style.css
+++ b/public/adminbackend/css/style.css
@@ -19234,6 +19234,7 @@ textarea.form-control {
   border: 1px solid #a6a6a6; }
 
 .box-shadowed {
+  background:#474a60;
   -webkit-box-shadow: 0 1px 15px 1px rgba(0, 0, 0, 0.08);
   -moz-box-shadow: 0 1px 15px 1px rgba(0, 0, 0, 0.08);
   box-shadow: 0 1px 15px 1px rgba(0, 0, 0, 0.08); }
